added unsa interface to vote

--- a/views/assistance.ejs
+++ b/views/assistance.ejs
@@ -10,7 +10,9 @@
 <body>
     <header>
         <div class="cabecera">
-        <img src="images/logo-unsa.svg" alt="UNSA" class="logo">
+            <a href="/">
+                <img src="../images/logo-unsa.svg" alt="UNSA" class="logo" href="/">
+            </a>
             <div class="titulo">
                 <h1><span class="text-big">Elecciones 2020</span></h1>
                 <span>Sistema Digital de Votación <b>E-vote</b></span>
@@ -21,16 +23,15 @@
         <!-- inicio formulario busqueda -->
         <div class="container">
         <div class="vertical-center">
-        <form class="formulario" method="post" action="/login" onsubmit="return validateForm()">
-            <fieldset>
-                <legend>Identificación de Elector</legend>
-                <label for="codigo">Usuario</label>
-                <input id="codigo" name="usuario" type="text" placeholder="Ingrese su usuario" required autofocus>
-                <label for="documento">Contraseña</label>
-                <input id="documento" name="documento" type="password" placeholder="Ingrese su Contraseña" required>
-            </fieldset>
-            <button class="boton-accion" >Ingresar</button>
-        </form>
+            <form class="formulario" method="post" action="/assistance" onsubmit="return validateForm()">
+                <fieldset>
+                    <legend>Registro de Asistencia</legend>
+                    <label for="codigo">Ingrese su Clave Secreta</label>
+                    <input id="codigo" name="usuario" type="text" placeholder="Clave Secreta" required autofocus>
+                    <span class="mensaje-atencion"> Usted encontrará su clave secreta en su correo Institucional UNSA</span>
+                </fieldset>
+                <button class="boton-accion" type="submit">Ir a Votar</button>
+            </form>
         </div>
         </div>
     </main>
