--- a/views/vote.ejs
+++ b/views/vote.ejs
@@ -1,265 +1,56 @@
 <!DOCTYPE html>
-<html >
-  <head>
-    <title>Voto Electronico UNSA-2020</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-  </head>
-
-
-  <!--body style="background-image: url('background.jpg');background-color: #cccccc;"-->
-  
-  <body style="background-color: #cccccc;" class="main">
-
-        <div class="row" align="center">
-
-          <div class="">
-              <img  src="/images/unsa2.png" id="logo"/>
-              <label style="font-size: xx-large;margin-left: 10px;"> VOTO ELECTRONICO UNSA-2020 </label> <br>
-              <label style="font-size: x-large;margin-top:40px; font-weight: bold; margin-left: 10px; color:black"> PRESIONE LA OPCIÓN DE SU PREFERENCIA </label>
-          </div>
-
-        </div>
-
-        <div class="container" style="margin-top:15px;">
-          <center>
-
-
-            <div class="list_vote">
-              <div class="col-md-12">
-                <!--h6 >List Group with Images</h6--> 
-
-                <ul class="list-group">
-                  <li style="font-size: x-large;" class="list-group-item d-flex justify-content-between align-items-center">
-                    Lista Nro 1
-                    <div class="image-parent" style="margin-left: 80px;">
-                        <img src="/images/partido_politico.png" class="img-fluid" alt="partido politico">
-                    </div>
-                    <input style="margin-left: 80px; font-size: xx-large;" type="checkbox" class="micheckbox" id="check_class" >  
-                  </li>
-                  
-                  <li style="font-size: x-large;" class="list-group-item d-flex justify-content-between align-items-center">
-                    Lista Nro 2
-                    <div class="image-parent" style="margin-left: 80px;">
-                        <img src="/images/partido_politico.png" class="img-fluid" alt="partido politico">
-                    </div>
-                    <input style="margin-left: 80px; font-size: xx-large;" type="checkbox" class="micheckbox" id="check_class" >  
-                  </li>
-
-                  <li style="font-size: x-large;" class="list-group-item d-flex justify-content-between align-items-center">
-                    Lista Nro 3
-                    <div class="image-parent" style="margin-left: 80px;">
-                        <img src="/images/partido_politico.png" class="img-fluid" alt="partido politico">
-                    </div>
-                    <input style="margin-left: 80px; font-size: xx-large;" type="checkbox" class="micheckbox" id="check_class" >  
-                  </li>
-
-                  <li style="font-size: x-large;" class="list-group-item d-flex justify-content-between align-items-center">
-                    Lista Nro 4
-                    <div class="image-parent" style="margin-left: 80px;">
-                        <img src="/images/partido_politico.png" class="img-fluid" alt="partido politico">
-                    </div>
-                    <input style="margin-left: 80px; font-size: xx-large;" type="checkbox" class="micheckbox" id="check_class" >  
-                  </li>
-
-                  <li style="font-size: x-large;" class="list-group-item d-flex justify-content-between align-items-center">
-                    Lista Nro 5
-                    <div class="image-parent" style="margin-left: 80px;">
-                        <img src="/images/partido_politico.png" class="img-fluid" alt="partido politico">
-                    </div>
-                    <input style="margin-left: 80px; font-size: xx-large;" type="checkbox" class="micheckbox" id="check_class" >  
-                  </li>
-
-                </ul>
-
-              </div>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Evote</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="librerias/scss/estilos.css">
+</head>
+<body>
+    <header>
+        <div class="cabecera">
+            <a href="/">
+                <img src="../images/logo-unsa.svg" alt="UNSA" class="logo" href="/">
+            </a>
+            <div class="titulo">
+                <h1><span class="text-big">Elecciones 2020</span></h1>
+                <span>Sistema Digital de Votación <b>E-vote</b></span>
             </div>
-
-            <div style="padding-top: 50px;">
-
-              <button type="button" class="btn btn-danger btn-lg" id="btn_submit" > SUBIR VOTO </button>
-            
-              <div style="padding-bottom: 50px;"></div>
-
-          </center>
         </div>
-          
-       
-        
-  </body>
+    </header>
+    <main>
+        <!-- inicio formulario busqueda -->
+        <div class="container">
+        <div class="vertical-center">
+            <form class="formulario" method="post" action="/vote" onsubmit="return validateForm()">
+                <fieldset>
+                    <legend>Emisión de Votación</legend>
+                    <h1>CONSEJO DE FACULTAD</h1>
+                    <H3>FACULTAD DE PRODUCCION Y SERVICIOS</H3>
+                    <div class="marcacion-voto"> 
+                        <input type="radio" name="lista" id="lista1">
+                        <label for="lista1">Lista 1</label>
+                
+                        <input type="radio" name="lista" id="lista2">
+                        <label for="lista2">Lista 2</label>
+                
+                        <input type="radio" name="lista" id="lista3">
+                        <label for="lista3">Lista 3</label>
+                    </div>
+
+                </fieldset>
+                <button class="boton-accion" type="submit">VOTAR</button>
+            </form>
+        </div>
+        </div>
+    </main>
+</body>
 </html>
 
-
 <script>
-
-//cleaning the cache   
-$(document).ready(function() {
-    $('.micheckbox').each(
-        function() {
-            $(this).prop("checked", false);
-    });
-});
-
-
-  $( '.micheckbox').on( 'click', function() {
-    if( $(this).is(':checked') ){
-        $('.micheckbox:checked').each(
-            function() {
-              $(this).prop("checked", false);  
-            }
-        );
-        $(this).prop("checked", true);
-        
-    } else {
-      $(this).prop("checked", true);
+    function validateForm(){
+      console.log("validating form");
+      return true;
     }
-  });
-
-
-  function validateForm(){
-    console.log("validating form");
-    return true;
-  }
-
-
-  $('#btn_submit').on('click',function(){
-      //alert("Voting");
-      /*
-      Swal.fire({ title: 'Confirm details:', text: "Test", type: 'warning', confirmButtonColor: '#3085d6',
-       cancelButtonColor: '#d33', confirmButtonText: 'Correct!', showCancelButton: true, reverseButtons: 
-       true, buttons: { cancel: true, confirm: true }});
-      */ 
-
-      
-      Swal.fire({
-        title: 'Usted esta a punto de emitir su voto',
-        text: "¡Usted no podra revertir esto!",
-        icon: 'warning',
-        showCancelButton: true,
-        reverseButtons: true,
-        confirmButtonColor: '#3085d6',
-        cancelButtonColor: '#d33',
-        confirmButtonText: 'SI, CONFIRMAR'
-      }).then((result) => {
-        if (result.value) {
-          Swal.fire(
-            '¡Emitido!',
-            'Usted a emitido correctamente su voto.',
-            'success'
-          )
-        }
-      });
-  });
-
 </script>
-
-
-
-<style>
-
-body {
-  color: white;
-}
-
-.list_vote{
-  color:black;
-}
-
-
-.image-parent {
-  max-width: 80px;
-
-}
-
-#logo{
-  height: 100px;
-  width: 300px;
-}
-#logo2{
-  height: 150px;
-  width: 150px;
-}
-
-.main{
-    background: #0264d6; /* Old browsers */
-    background: -moz-radial-gradient(center, ellipse cover,  #0264d6 1%, #1c2b5a 100%); /* FF3.6+ */
-    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(1%,#0264d6), color-stop(100%,#1c2b5a)); /* Chrome,Safari4+ */
-    background: -webkit-radial-gradient(center, ellipse cover,  #0264d6 1%,#1c2b5a 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-radial-gradient(center, ellipse cover,  #0264d6 1%,#1c2b5a 100%); /* Opera 12+ */
-    background: -ms-radial-gradient(center, ellipse cover,  #0264d6 1%,#1c2b5a 100%); /* IE10+ */
-    background: radial-gradient(ellipse at center,  #0264d6 1%,#1c2b5a 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0264d6', endColorstr='#1c2b5a',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-    height:calc(100vh);
-    width:100%;
-}
-
-[class*="fontawesome-"]:before {
-  font-family: 'FontAwesome', sans-serif;
-}
-
-/* ---------- GENERAL ---------- */
-
-* {
-  box-sizing: border-box;
-    margin:0px auto;
-}
-
-body { 
-  color: white;
-  font: 87.5%/1.5em 'Open Sans', sans-serif;
-  margin: 0;
-}
-
-a {
-	color: white;
-	text-decoration: none;
-}
-
-a:hover {
-	text-decoration: underline;
-  color: white;
-}
-
-input {
-	border: none;
-	font-family: 'Open Sans', Arial, sans-serif;
-	font-size: 14px;
-	line-height: 1.5em;
-	padding: 0;
-	-webkit-appearance: none;
-}
-
-p {
-	line-height: 1.5em;
-}
-
-
-
-#check_class {
-  /*transform: scale(2.5);*/
-  /*background-color: gray;*/
-  width: 50px !important;
-  height: 50px !important;
-  margin: 5px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  -o-appearance: none;
-  appearance:none;
-  outline: 2px solid black;
-  box-shadow: none;
-  font-size: 2em;
-	text-align:center;
-}
-
-input[type='checkbox']:checked:after {
-	content: 'X';
-}
-
-</style>
-
