--- a/Interfaces/librerias/scss/estilos.css
+++ b/Interfaces/librerias/scss/estilos.css
@@ -301,4 +301,141 @@ table {
 }
 
 /******/
+/**********************\
+   #Menu Principal
+\**********************/
+.menu-principal {
+  /* @include cl-complemento(0.2); */
+  background-color: #ccc;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  height: 40px;
+  font: "Roboto Condensed", Arial, Helvetica, sans-serif;
+  font-size: 11.146px;
+  font-weight: 700;
+  letter-spacing: -0.06em;
+  list-style: none;
+}
+
+.menu-principal .menu-principal-item {
+  border-left: solid 1px black;
+  width: 100%;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.menu-principal .menu-principal-item:first-child {
+  border-left: none;
+}
+
+.menu-principal a {
+  display: inline-block;
+  color: black;
+  text-decoration: none;
+  margin: 0 5px;
+}
+
+.menu-principal a:hover {
+  color: #800337;
+}
+
+.menu-principal a:hover span {
+  background: #800337;
+}
+
+.icon-fnd {
+  background: rgba(0, 0, 0, 0.6);
+  color: #fff;
+  font-size: 11.146px;
+  padding: 5px;
+  margin-right: 5px;
+  border-radius: 10px;
+}
+
+.icon-fnd:hover {
+  background: #800337;
+}
+
+/**********************\
+ #Tablas de Resultados
+\**********************/
+.tit-tabla-01 {
+  background: rgba(118, 55, 74, 0.3);
+  height: 40px;
+  font-size: 14px;
+  font-family: "Roboto Condensed", Arial, Helvetica, sans-serif;
+  text-transform: uppercase;
+  line-height: 3em;
+  padding-left: 10px;
+}
+.tabla-registro {
+  margin: 15px auto;
+  width: calc(100% - 20px);
+}
+
+.tabla-registro tr:first-child {
+  border-bottom: none;
+}
+
+.tabla-registro tr:last-child {
+  border-bottom: black solid 3px;
+}
+
+.tabla-registro th {
+  font-family: "Roboto Condensed", Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  text-transform: uppercase;
+  background: rgba(0, 0, 0, 0.25);
+  padding: 7px;
+}
+
+.tabla-registro tr {
+  border-bottom: #800337 solid 1px;
+}
+
+.tabla-registro tr:hover {
+  background: rgba(0, 0, 0, 0.05);
+}
+
+.tabla-registro tr td:first-child {
+  text-align: center;
+}
+
+.tabla-registro tr td:last-child {
+  text-align: center;
+}
+
+.tabla-registro td {
+  padding: 7px;
+}
+
+.tabla-registro td a {
+  font-size: 11.146px;
+  display: block;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding: 5px 3px;
+  margin-bottom: 2px;
+  text-decoration: none;
+}
+
+.tabla-registro td .btn-edit {
+  background: rgba(49, 56, 129, 0.3);
+}
+
+.tabla-registro td .btn-del {
+  background: rgba(118, 55, 74, 0.3);
+}
+
+/******/
+.textos {
+  margin: 15px auto;
+  width: calc(100% - 20px);
+}
 /*# sourceMappingURL=estilos.css.map */
