padron electoral front - Proceso activo front

--- a/views/admin/electoral-process.ejs
+++ b/views/admin/electoral-process.ejs
@@ -28,7 +28,8 @@
    <!-- Datepicker-->
   <link rel="stylesheet" href="https://rawgit.com/Eonasdan/bootstrap-datetimepicker/master/build/css/bootstrap-datetimepicker.min.css">
 
-
+  <!-- Bootstrap toogle -->
+  <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
 
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -139,6 +140,7 @@
                   <th ><p align="center">Nombre del Proceso</p></th>
                   <th ><p align="center">Apertura</p></th>
                   <th ><p align="center">Cierre</p></th>
+                  <th ><p align="center">Activar</p></th>
                 </tr>
               </thead>
               <tbody align="center">
@@ -172,7 +174,8 @@
 <script src="https://rawgit.com/Eonasdan/bootstrap-datetimepicker/master/build/js/bootstrap-datetimepicker.min.js"></script>
 <!-- Timezone-->
 <!--script src= ".../js/moment-timezone-withdata.js" ></script-->
-
+<!-- Bootstrap toogle -->
+<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 <script>
 
 function init_dates(){
@@ -219,7 +222,7 @@ function get_electoral_process(){
     //table.find("tbody tr").remove();
     var i=1
     processes.forEach(function (process) {
-        table.append("<tr><td>" + i + "</td><td>" + process.name + "</td><td>"+ process.date_init  +"</td><td>"+ process.date_end+"</td></tr>");
+        table.append("<tr><td>" + i + "</td><td>" + process.name + "</td><td>"+ process.date_init  +"</td><td>"+ process.date_end+'</td><td><input type="checkbox" checked data-toggle="toggle"></td></tr>');
         i++;
     });
     
