--- a/views/admin/include/leftpanel.ejs
+++ b/views/admin/include/leftpanel.ejs
@@ -65,107 +65,26 @@
               </a>
           </li> 
 
+          <li class="treeview">
+            <a href="/admin/padron-activo">
+                <i class="fa fa-paper-plane"></i> <span> PADRON ACTIVO </span>
+                <span class="pull-right-container">
+                    <!--i class="fa fa-angle-left pull-right"></i-->
+                </span>
+                </a>
+          </li> 
 
-          <!--li class="treeview">
-            <a href="/admin/historical">
-                <i class="fa fa-history"></i> <span> HISTORIAL </span>
+          <li class="treeview">
+            <a href="/admin/logout">
+                <i class="fa fa-power-off"></i> <span> CERRAR SESION </span>
                 <span class="pull-right-container">
                    
                 </span>
-                </a>
-            </li--> 
-
-
-
-        <!--li class="treeview">
-            <a href="#">
-              <i class="fa fa-dashboard"></i> <span>Conductores Registro</span>
-              <span class="pull-right-container">
-                <i class="fa fa-angle-left pull-right"></i>
-              </span>
             </a>
-            <ul class="treeview-menu">
-              <li><a href="index.html"><i class="fa fa-circle-o"></i> Nuevo Conductor</a></li>
-              <li><a href="index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
-            </ul>
-          </li-->
-
-
-        <!--li class="treeview">
-          <a href="#">
-            <i class="fa fa-share"></i> <span>Multilevel</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
-            <li>
-              <a href="#"><i class="fa fa-circle-o"></i> Level One
-                <span class="pull-right-container">
-                  <i class="fa fa-angle-left pull-right"></i>
-                </span>
-              </a>
-              <ul class="treeview-menu">
-                <li><a href="#"><i class="fa fa-circle-o"></i> Level Two</a></li>
-                <li>
-                  <a href="#"><i class="fa fa-circle-o"></i> Level Two
-                    <span class="pull-right-container">
-                      <i class="fa fa-angle-left pull-right"></i>
-                    </span>
-                  </a>
-                  <ul class="treeview-menu">
-                    <li><a href="#"><i class="fa fa-circle-o"></i> Level Three</a></li>
-                    <li><a href="#"><i class="fa fa-circle-o"></i> Level Three</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </li>
-            <li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
-          </ul>
-        </li-->
-
+          </li>
       </ul>
     </section>
     <!-- /.sidebar -->
   </aside>
 
 <script src="../plugins/jQuery/jquery-2.2.3.min.js"></script>
-<script>
-
-/*
-function GetIdCompany(){
-    return JSON.parse($.ajax({
-        type: "GET",
-        url: "/admin/get_info_user",
-        cache: false,
-        async: false
-    }).responseText);
- }*/
-
- //console.log("Changing name left panel");
-  //var data = GetIdCompany();
-
-  /*
-  function GetIdCompany(){
-    return JSON.parse($.ajax({
-        type: "GET",
-        url: "/admin/get_info_user",
-        cache: false,
-        async: false
-    }).responseText);
- }
-
-  //console.log("Changing name supervisor");
-  var data = GetIdCompany();
-  //console.log(data);
-
-  $('#name_header1').text(data.username);
-  $('#name_header2').text(data.username);
-  $('#name_header_company').text(data.company_name);
-  $('#name_panel_left').text(data.username);
-  $('#name_company_panel_left').text(data.company_name);
-  */
-
-
-</script>
