--- a/views/admin/include/leftpanel.ejs
+++ b/views/admin/include/leftpanel.ejs
@@ -30,7 +30,7 @@
       <ul class="sidebar-menu">
         <li class="header" align="center" style="color:#3c8dbc; font-size: 14px"> OPCIONES</li>
         <li class="treeview">
-        <a href="/admin/panel">
+        <a href="/admin/panel" id='resume'>
             <i class="fa fa-chart-line"></i> <span>RESUMEN</span>
             <span class="pull-right-container">
               <!--i class="fa fa-angle-left pull-right"></i-->
@@ -38,7 +38,7 @@
           </a>
         </li>
          
-        <li class="treeview">
+        <li class="treeview" id='electoral_process'>
         <a href="/admin/electoral-process">
             <i class="fa fa-clock"></i> <span> PROCESO ELECTORAL </span>
             <span class="pull-right-container">
@@ -47,7 +47,7 @@
             </a>
         </li> 
 
-        <li class="treeview">
+        <li class="treeview" id='election_type'>
           <a href="/admin/process-type">
             <i class="fa fa-person-booth"></i> <span> TIPO ELECCION </span>
               <span class="pull-right-container">
@@ -56,7 +56,7 @@
               </a>
           </li> 
           
-        <li class="treeview">
+        <li class="treeview" id='electoral_list'>
           <a href="/admin/electoral-list">
               <i class="fa fa-list-ol"></i> <span> LISTA ELECTORAL </span>
               <span class="pull-right-container">
@@ -133,7 +133,7 @@
 <script src="../plugins/jQuery/jquery-2.2.3.min.js"></script>
 <script>
 
-/*
+
 function GetIdCompany(){
     return JSON.parse($.ajax({
         type: "GET",
@@ -141,10 +141,17 @@ function GetIdCompany(){
         cache: false,
         async: false
     }).responseText);
- }*/
+ }
 
- //console.log("Changing name left panel");
-  //var data = GetIdCompany();
+//console.log("Changing name left panel");
+var data = GetIdCompany();
+//console.log(data)
+/*
+var data = {};
+data.username = "juan";
+data.company_name = "juanito";
+*/
+
 
   /*
   function GetIdCompany(){
@@ -154,18 +161,27 @@ function GetIdCompany(){
         cache: false,
         async: false
     }).responseText);
- }
-
+  }
   //console.log("Changing name supervisor");
   var data = GetIdCompany();
   //console.log(data);
+  */
 
+  //console.log(data);
+  
   $('#name_header1').text(data.username);
   $('#name_header2').text(data.username);
-  $('#name_header_company').text(data.company_name);
+  $('#name_header_company').text(data.name);
+
   $('#name_panel_left').text(data.username);
-  $('#name_company_panel_left').text(data.company_name);
-  */
+  if(data.rol == '0'){
+    $('#name_company_panel_left').text('ADMIN');
+  }else{
+    $('#name_company_panel_left').text('CONTROLADOR');
+    $('#electoral_process').hide();
+    $('#election_type').hide();
+  }
+
 
 
 </script>
